fix(celery): correct shell path from `bin/bash` to `/bin/bash` in statefulset configuration

--- a/apps/media/dispatcharr/celery.statefulset.yaml
+++ b/apps/media/dispatcharr/celery.statefulset.yaml
@@ -23,7 +23,7 @@ spec:
           workingDir: /app
           command:
 #            - /app/docker/entrypoint.celery.sh
-            - bin/bash
+            - /bin/bash
             - -c
             - |
               #!/bin/bash
