--- a/apps/glance/glance.yml
+++ b/apps/glance/glance.yml
@@ -10,8 +10,8 @@ pages:
             collapse-after: 3
             cache: 3h
             feeds:
-              - url: https://openrss.org/www.axios.com/local/kansas-city
-                title: Axios Kansas City
+              - url: https://kill-the-newsletter.com/feeds/8xoz2d7l650tjeu4j2xk.xml
+                title: Kill The Newsletter KC
               - url: https://www.kcur.org/podcast/kansas-city-today/rss.xml
                 title: KCUR
               - url: https://api.axios.com/feed/
