--- a/apps/media/base/nvme.storage.yaml
+++ b/apps/media/base/nvme.storage.yaml
@@ -11,7 +11,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: local-storage
   local:
-    path: /mnt/nvme
+    path: /opt/tmp_sabnzbd
   nodeAffinity:
     required:
       nodeSelectorTerms:
