--- a/apps/media/media-apps.applicationset.yaml
+++ b/apps/media/media-apps.applicationset.yaml
@@ -21,6 +21,7 @@ spec:
           - name: readarr
           - name: dispatcharr
           - name: hdhr2xmltv
+          - name: seerr
   template:
     metadata:
       name: '{{name}}'
