--- a/apps/media/seerr/httproute.yaml
+++ b/apps/media/seerr/httproute.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: overseerr-httproute
+  name: seerr-httproute
   namespace: media
 spec:
   parentRefs:
@@ -11,14 +11,14 @@ spec:
       namespace: default
   hostnames:
     - requests.x.pmcd.io
-    - overseerr.x.pmcd.io
+    - seerr.x.pmcd.io
   rules:
     - matches:
         - path:
             type: PathPrefix
             value: /
       backendRefs:
-        - name: overseerr
+        - name: seerr
           kind: Service
           namespace: media
-          port: 5055
+          port: 80
