feat(argocd): add liveness and readiness probe timeouts for repoServer

--- a/core/argocd.yaml
+++ b/core/argocd.yaml
@@ -71,6 +71,10 @@ spec:
                 memory: 2Gi
 
           repoServer:
+            livenessProbe:
+              timeoutSeconds: 10
+            readinessProbe:
+              timeoutSeconds: 10
             resources:
               requests:
                 cpu: 35m
