fix(httproute): change service namespace from media to default

--- a/apps/n8n/httproute.yaml
+++ b/apps/n8n/httproute.yaml
@@ -18,5 +18,5 @@ spec:
       backendRefs:
         - name: n8n
           kind: Service
-          namespace: media
+          namespace: default
           port: 80
