feat(deployment): add nodeSelector for ARM64 architecture

--- a/apps/readflow/deployment.yaml
+++ b/apps/readflow/deployment.yaml
@@ -66,4 +66,5 @@ spec:
             requests:
               cpu: 25m
               memory: 864Mi
-
+      nodeSelector:
+        kubernetes.io/arch: arm64
