fix(deployment): update nodeSelector from ARM64 to AMD64 architecture

--- a/apps/readflow/deployment.yaml
+++ b/apps/readflow/deployment.yaml
@@ -67,4 +67,4 @@ spec:
               cpu: 25m
               memory: 864Mi
       nodeSelector:
-        kubernetes.io/arch: arm64
+        kubernetes.io/arch: amd64
