feat(storage): add SMB persistent volume and claim for freshrss

--- a/apps/freshrss/kustomization.yaml
+++ b/apps/freshrss/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - deployment.yaml
   - service.yaml
   - httproute.yaml
-  - pvc.yaml
+  - storage.yaml
   - 1password.secret.yaml
 
 images:
