--- a/apps/freshrss/deployment.yaml
+++ b/apps/freshrss/deployment.yaml
@@ -72,4 +72,4 @@ spec:
       volumes:
         - name: data
           persistentVolumeClaim:
-            claimName: longhorn-freshrss-data
+            claimName: smb-freshrss-claim
