feat(deployment): add RUN_MIGRATIONS environment variable to deployment configuration

--- a/apps/miniflux/deployment.yaml
+++ b/apps/miniflux/deployment.yaml
@@ -26,6 +26,8 @@ spec:
           env:
             - name: TZ
               value: America/Chicago
+            - name: RUN_MIGRATIONS
+              value: "1"
           envFrom:
             - secretRef:
                 name: miniflux-1pw
