feat(deployment): add WEBHOOK_URL and N8N_PROXY_HOPS environment variables to deployment configuration

--- a/apps/n8n/deployment.yaml
+++ b/apps/n8n/deployment.yaml
@@ -27,6 +27,11 @@ spec:
               value: "true"
             - name: N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS
               value: "true"
+            - name: WEBHOOK_URL
+              value: https://n8n.pmcd.dev
+            - name: N8N_PROXY_HOPS
+              value: "1"
+
           envFrom:
             - secretRef:
                 name: n8n-1pw
