--- a/apps/fusion/kustomization.yaml
+++ b/apps/fusion/kustomization.yaml
@@ -9,5 +9,5 @@ resources:
 
 images:
   - name: fusion
-    newName: fusion/fusion
-    newTag: 2.2.17
+    newName: ghcr.io/patrickjmcd/fusion
+    newTag: test
