feat(deployment): add FUSION_PORT environment variable to deployment configuration

--- a/apps/fusion/deployment.yaml
+++ b/apps/fusion/deployment.yaml
@@ -26,6 +26,8 @@ spec:
           env:
             - name: TZ
               value: "America/Chicago"
+            - name: FUSION_PORT
+              value: "8080"
 
           envFrom:
             - secretRef:
