feat(fusion): rename fusion resources to reedme and update configurations

--- a/apps/reedme.yaml
+++ b/apps/reedme.yaml
@@ -10,12 +10,12 @@ metadata:
 spec:
   destination:
     name: in-cluster
-    namespace: fusion
+    namespace: reedme
   project: apps
   syncPolicy:
     automated: { }
   source:
-    path: apps/fusion
+    path: apps/reedme
     repoURL: https://github.com/patrickjmcd/k8s-argo.git
     targetRevision: main
 
