--- a/apps/reedme/1password.secret.yaml
+++ b/apps/reedme/1password.secret.yaml
@@ -1,6 +1,6 @@
 apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
-  name: fusion-1pw
+  name: reedme-1pw
 spec:
-  itemPath: "vaults/Kubernetes/items/fusion"
+  itemPath: "vaults/Kubernetes/items/reedme"
