--- a/apps/reedme/httproute.yaml
+++ b/apps/reedme/httproute.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: fusion-httproute
+  name: reedme-httproute
   namespace: default
 spec:
   parentRefs:
@@ -10,14 +10,14 @@ spec:
       name: traefik-gateway
       namespace: default
   hostnames:
-    - fusion.x.pmcd.io
+    - reedme.x.pmcd.io
   rules:
     - matches:
         - path:
             type: PathPrefix
             value: /
       backendRefs:
-        - name: fusion
+        - name: reedme
           kind: Service
           namespace: default
           port: 80
