--- a/apps/reedme/service.yaml
+++ b/apps/reedme/service.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app.kubernetes.io/instance: fusion
-    app.kubernetes.io/name: fusion
-  name: fusion
+    app.kubernetes.io/instance: reedme
+    app.kubernetes.io/name: reedme
+  name: reedme
   namespace: default
 spec:
   ports:
@@ -13,6 +13,6 @@ spec:
       protocol: TCP
       targetPort: http
   selector:
-    app.kubernetes.io/instance: fusion
-    app.kubernetes.io/name: fusion
+    app.kubernetes.io/instance: reedme
+    app.kubernetes.io/name: reedme
   type: ClusterIP
