--- a/apps/reedme.yaml
+++ b/apps/reedme.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: fusion
+  name: reedme
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
