--- a/apps/reedme/deployment.yaml
+++ b/apps/reedme/deployment.yaml
@@ -26,7 +26,7 @@ spec:
           env:
             - name: TZ
               value: "America/Chicago"
-            - name: reedme_PORT
+            - name: REEDME_PORT
               value: "8080"
 
           envFrom:
