--- a/apps/sparkyfitness-server.yaml
+++ b/apps/sparkyfitness-server.yaml
@@ -12,8 +12,8 @@ spec:
     namespace: default
     name: in-cluster
   project: apps
-  #  syncPolicy:
-  #    automated: { }
+  syncPolicy:
+    automated: { }
   sources:
     - repoURL: https://github.com/patrickjmcd/k8s-argo.git
       targetRevision: main
