fix(config): update secret reference name for SparkyFitness server

--- a/apps/sparkyfitness-server/values.yaml
+++ b/apps/sparkyfitness-server/values.yaml
@@ -54,7 +54,7 @@ env:
 
 envFrom:
   - secretRef:
-      name: sparkyfitness-1pw
+      name: sparkyfitness-server-1pw
 
 extraVolumeMounts:
   - mountPath: /app/SparkyFitnessServer/backup
