fix(n8n): change namespace from 'n8n' to 'default' in configuration

--- a/apps/n8n.yaml
+++ b/apps/n8n.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   destination:
     name: in-cluster
-    namespace: n8n
+    namespace: default
   project: apps
   syncPolicy:
     automated: { }
