fix(config): change namespace from 'reedme' and 'unpoller' to 'default' in configurations

--- a/apps/unpoller.yaml
+++ b/apps/unpoller.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   destination:
     name: in-cluster
-    namespace: unpoller
+    namespace: default
   project: apps
   syncPolicy:
     automated: { }
