--- a/apps/reedme.yaml
+++ b/apps/reedme.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   destination:
     name: in-cluster
-    namespace: reedme
+    namespace: default
   project: apps
   syncPolicy:
     automated: { }
